--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
    
       <div class="container">
-        <h1>FormSubmit Demo</h1>
-        <form target="_blank" action="https://formsubmit.co/ninjoe365@gmail.com" method="POST">
+        
+        <form target="_blank" action="https://formsubmit.co/8b0f7cf57f081f821b64dce6ab46196f " method="POST">
           <div class="form-group">
             <div class="form-row">
               <div class="col">
