--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    
       <div class="container">
         
-        <form target="_blank" action="https://formsubmit.co/8b0f7cf57f081f821b64dce6ab46196f " method="POST">
+        <form target="_blank" action="https://script.google.com/macros/s/AKfycbzAtYOBmR65tLDzzTjZEX1jJ3786ve50ny5syrkBhM/dev" method="POST">
           <div class="form-group">
             <div class="form-row">
               <div class="col">
