--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <form onsubmit="sendEmail(); reset(); return false;">
       <h3>get in touch</h3>
       <input type="text" id="name" placeholder="your name" required>
-      <input type="email" id="email" placeholder="your@email.com" required>
+      <input type="email" id="email" placeholder="your@email.com" >
       <input type="text" id="phone" placeholder="phone number" required>
       <textarea  id="message" cols="30" rows="4" placeholder="how can we help you"></textarea>
     <button type="submit">SEND</button>
