--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 <>
   <div class="container">
-    <form onsubmit="sendEmail(); reset(); return false;">
+    <form method="post" action="https://formsubmit.co/your@email.com">
       <h3>get in touch</h3>
       <input type="text" id="name" placeholder="your name" required>
       <input type="email" id="email" placeholder="your@email.com" >
