--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 <>
   <div class="container">
-    <form method="post" action="https://formsubmit.co/your@email.com">
+    <form method="post" action="https://formsubmit.co/8b0f7cf57f081f821b64dce6ab46196f ">
       <h3>get in touch</h3>
       <input type="text" id="name" placeholder="your name" required>
       <input type="email" id="email" placeholder="your@email.com" >
