--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
       <input type="text" id="name" placeholder="your name" required>
       <input type="email" id="email" placeholder="your@email.com" >
       <input type="text" id="phone" placeholder="phone number" required>
-      <input type="hidden" name="_next" value="https://ninjoe365.co/staticwordpress">
+      <input type="hidden" name="_next" value="https://ninjoe365.com/staticwordpress">
       <input type="hidden" name="_subject" value="From website">
+      <input type="hidden" name="_captcha" value="false">
       <textarea  id="message" cols="30" rows="4" placeholder="how can we help you"></textarea>
     <button type="submit">SEND</button>
     
