--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <input type="hidden" name="_next" value="https://ninjoe365.com/staticwordpress">
       <input type="hidden" name="_subject" value="From website">
       
-      <input type="hidden" name="_template" value="table">
+      <input type="hidden" name="_template" value="basic">
       <textarea  id="message" cols="30" rows="4" placeholder="how can we help you"></textarea>
     <button type="submit">SEND</button>
     
