--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 
   <div class="container">
-    <form action="https://formspree.io/f/xaykknjk" method="post">
+    <form action="https://formsubmit.co/8b0f7cf57f081f821b64dce6ab46196f" method="post">
       <h3>get in touch</h3>
       <input type="text" id="name" name="name" placeholder="your name" required>
       <input type="email" id="email" name="email" placeholder="your@email.com" >
